--- a/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
@@ -78,7 +78,7 @@
                     <p:row>
                         <div>
                             <p:outputLabel for="sortByRuleset" value="#{msgs.metadataSortByRuleset}"/>
-                            <p:selectBooleanCheckbox id="sortByRuleset"
+                            <p:selectBooleanCheckbox id="sortByRuleset" styleClass="switch input"
                                                      value="#{RulesetForm.ruleset.orderMetadataByRuleset}"
                                                      onchange="toggleSave()"/>
                         </div>
