--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -177,7 +177,7 @@
                             <p:outputLabel value="#{msgs.showInactiveProjects}"/>
                         </p:column>
                         <p:column>
-                            <p:selectBooleanCheckbox value="#{ProcessForm.showInactiveProjects}"/>
+                            <p:selectBooleanCheckbox styleClass="switch" value="#{ProcessForm.showInactiveProjects}"/>
                         </p:column>
                     </p:row>
                     <p:row>
@@ -185,7 +185,7 @@
                             <h:outputLabel value="#{msgs.showClosedProcesses}"/>
                         </p:column>
                         <p:column>
-                            <p:selectBooleanCheckbox value="#{ProcessForm.showClosedProcesses}"/>
+                            <p:selectBooleanCheckbox styleClass="switch" value="#{ProcessForm.showClosedProcesses}"/>
                         </p:column>
                     </p:row>
                 </p:panelGrid>
