--- a/Kitodo/src/main/webapp/pages/tasks.xhtml
+++ b/Kitodo/src/main/webapp/pages/tasks.xhtml
@@ -15,9 +15,20 @@
         template="/WEB-INF/templates/baseListView.xhtml"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentHeader">
         <h3>#{msgs.tasksCurrent}</h3>
+        <h:form id="taskForm">
+            <p:selectCheckboxMenu styleClass="configure-columns-button"
+                                  label=""
+                                  title="#{msgs.configureColumns}"
+                                  style="float: right; margin-right: 0;"
+                                  value="#{CurrentTaskForm.selectedColumns}">
+                <f:selectItems value="#{CurrentTaskForm.columns}" />
+                <p:ajax update="tasksTabView"/>
+            </p:selectCheckboxMenu>
+        </h:form>
     </ui:define>
 
     <ui:define name="pageTabView">
