Style detail view of gallery

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -21,6 +21,7 @@
 
         <!-- JavaScript -->
         <h:outputScript name="js/resize.js" target="body"/>
+        <h:outputScript name="js/scroll.js" target="body"/>
 
         <p:panel id="metadataEditor">
             <!-- Header -->
