Add columns configuration authority and corresponding role

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -56,6 +56,7 @@
                                   label=""
                                   title="#{msgs.configureColumns}"
                                   style="float: right; margin-right: 0;"
+                                  rendered="#{SecurityAccessController.hasAuthorityToConfigureColumns()}"
                                   value="#{ProcessForm.selectedColumns}">
                 <f:selectItems value="#{ProcessForm.columns}" />
                 <p:ajax update="processesTabView"/>
