Add growl messages when saving column configurations

--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -64,6 +64,8 @@
             <p:commandButton action="#{ProcessForm.saveSelectedColumns()}"
                              icon="fa fa-save fa-lg"
                              style="margin-right: 10px;"
+                             onclick="PF('notifications').renderMessage(
+                                 {'summary':'#{msgs.columnConfigurationSaved}','severity':'info'});"
                              title="#{msgs.saveColumnConfiguration}"/>
         </h:form>
     </ui:define>
