--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -56,6 +56,8 @@
             <p:commandButton action="#{UserForm.saveSelectedColumns()}"
                              icon="fa fa-save fa-lg"
                              style="margin-right: 10px;"
+                             onclick="PF('notifications').renderMessage(
+                                 {'summary':'#{msgs.columnConfigurationSaved}','severity':'info'});"
                              title="#{msgs.saveColumnConfiguration}"/>
         </h:form>
     </ui:define>
