--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -86,6 +86,7 @@
                 <ui:include src="/WEB-INF/templates/includes/processes/batchList.xhtml"/>
             </p:tab>
         </p:tabView>
+        <p:ajaxStatus onstart="PF('loadingDialog').show()" oncomplete="PF('loadingDialog').hide()"/>
     </ui:define>
 
     <ui:define name="breadcrumbs">
