--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -59,18 +59,9 @@
                                   title="#{msgs.configureColumns}"
                                   value="#{ProcessForm.selectedColumns}">
                 <f:selectItems value="#{ProcessForm.columns}" />
-                <p:ajax update="processesTabView"/>
+                <p:ajax listener="#{ProcessForm.saveSelectedColumns()}"
+                        update="processesTabView"/>
             </p:selectCheckboxMenu>
-            <p:commandButton action="#{ProcessForm.saveSelectedColumns()}"
-                             icon="fa fa-save fa-lg"
-                             style="margin-right: 10px;"
-                             oncomplete="PF('notifications').renderMessage(
-                                 {'summary':'#{msgs.columnConfigurationSaved}','severity':'info'});"
-                             title="#{msgs.saveColumnConfiguration}">
-                <p:confirm header="#{msgs.confirmSavingColumnConfigurationTitle}"
-                           message="#{msgs.confirmSavingColumnConfigurationMessagee}"
-                           icon="ui-icon-alert"/>
-            </p:commandButton>
         </h:form>
     </ui:define>
 
