Do not escape special characters in metadata editor comments

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -59,7 +59,7 @@
                 </div>
 
                 <!-- Element for resizing first and second column -->
-                <div class="resizer" id="firstResizer"/>
+                <div class="resizer" id="firstResizer"></div>
 
                 <!-- Second Column -->
                 <div class="collapsibleWrapper" id="secondColumnWrapper" data-min-width="200">
@@ -81,7 +81,7 @@
                         </div>
 
                         <!-- Vertical resizer -->
-                        <div id="verticalResizer"/>
+                        <div id="verticalResizer"></div>
 
                         <div class="columnHeadingWrapper">
                             <h:outputText value="#{msgs.comments}"/>
@@ -96,7 +96,7 @@
                 </div>
 
                 <!-- Element for resizing second and third column -->
-                <div class="resizer" id="secondResizer"/>
+                <div class="resizer" id="secondResizer"></div>
 
                 <!-- Third Column -->
                 <div class="collapsibleWrapper" id="thirdColumnWrapper" data-min-width="400">
