Update login screen CSS rules

--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -24,7 +24,7 @@
     <ui:define name="header">
         <div class="wrapper">
             <section id="portal-logo" class="login-screen">
-                <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160" id="kitodo-logo"/>
+                <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" height="36" id="kitodo-logo"/>
                 <h:graphicImage name="images/kitodo-icon.svg" alt="Kitodo.Production" width="40" id="kitodo-icon"/>
             </section>
         </div>
